--- a/accepted.html
+++ b/accepted.html
@@ -1491,9 +1491,9 @@
         </div>
     </div>
     <div class="container">
-        <h1>Thank you for saying Yes!</h1>
+        <h1>I love you tooooooo!</h1>
         <div class="heart">❤️</div>
-        <p>I knew you loved me too!</p>
+        <p>I knew that you loved me too!</p>
     </div>
 
     <script>
